--- a/package.json
+++ b/package.json
@@ -1,49 +1,65 @@
 {
-  "name": "cc.js",
-  "version": "1.0.0",
-  "description": "Dedicated js for cc",
-  "directories": {
-    "doc": "docs",
-    "test": "tests"
-  },
+  "name": "cc-js",
+  "version": "1.0.2",
+  "description": "Produce universal library with webpack and es6",
+  "main": "lib/cc-js.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack --env dev && webpack --env build && npm run test",
+    "dev": "webpack --progress --colors --watch --env dev",
+    "test": "mocha --require babel-register --colors ./test/*.spec.js",
+    "test:watch": "mocha --require babel-register --colors -w ./test/*.spec.js",
+    "test:cover": "cross-env NODE_ENV=test nyc mocha --require babel-register --colors test/*.js",
+    "repl": "node -i -e \"$(< ./lib/cc-js.js)\""
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/suipotryot/cc.js.git"
+    "url": "https://github.com/i3d2c/cc-js.git"
   },
-  "keywords": [],
-  "author": "Guillaume Dubus <guillaume1.dubus@gmail.com>",
-  "license": "ISC",
+  "keywords": [
+    "webpack",
+    "es6",
+    "starter",
+    "library",
+    "universal",
+    "umd",
+    "commonjs"
+  ],
+  "author": "Guillaume Dubus",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/suipotryot/cc.js/issues"
+    "url": "https://github.com/i3d2c/cc-js/issues"
   },
-  "homepage": "https://github.com/suipotryot/cc.js#readme",
+  "homepage": "https://github.com/i3d2c/cc-js",
   "devDependencies": {
-    "babel-core": "^6.0.0",
-    "chai": "^4.2.0",
-    "eslint": "^5.10.0",
-    "eslint-config-google": "^0.11.0",
-    "jsdom": "^13.1.0",
-    "jsdom-global": "^3.0.2",
-    "mocha": "^5.2.0",
-    "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-node-externals": "^1.7.2",
-    "webpack-shell-plugin": "^0.5.0"
+    "@babel/cli": "^7.0.0-beta.51",
+    "@babel/core": "^7.0.0-beta.51",
+    "@babel/preset-env": "^7.0.0-beta.51",
+    "babel-eslint": "^8.0.3",
+    "babel-loader": "^8.0.0-beta.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-istanbul": "^5.1.0",
+    "babel-preset-env": "^7.0.0-beta.3",
+    "babel-register": "^7.0.0-beta.3",
+    "chai": "^4.1.2",
+    "cross-env": "^5.2.0",
+    "eslint": "^5.0.1",
+    "eslint-loader": "^2.0.0",
+    "jsdom": "11.11.0",
+    "jsdom-global": "3.0.2",
+    "mocha": "^4.0.1",
+    "nyc": "^13.3.0",
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "webpack": "^4.12.2",
+    "webpack-cli": "^3.0.8",
+    "yargs": "^10.0.3"
   },
-  "babel": {
-    "presets": [
-      "env"
-    ]
-  },
-  "env": {
-    "es6": true
+  "nyc": {
+    "sourceMap": false,
+    "instrument": false
   },
   "dependencies": {
-    "fabricashape": "^1.0.0"
-  },
-  "main": "src/index.js"
+    "backbone": "^1.4.0",
+    "fabricashape": "^1.0.2",
+    "jquery": "^3.4.0"
+  }
 }
