--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,18 @@
 {
-  "presets": ["env"],
-  "plugins": ["babel-plugin-add-module-exports"],
+  "presets": [
+    ["env", {
+      "modules": false,
+      "targets": {
+        "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
+      }
+    }],
+    "stage-2"
+  ],
+  "plugins": ["transform-vue-jsx", "transform-runtime"],
   "env": {
     "test": {
-      "plugins": [
-        ["istanbul"]
-      ]
+      "presets": ["env", "stage-2"],
+      "plugins": ["transform-vue-jsx", "istanbul"]
     }
   }
 }
